log
ma., 13 de may. de 2025 22:55:57: 
 sudoku.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:47:15: error: unused variable 'l' [-Werror=unused-variable]
   47 |     int i,j,k,l;
      |               ^
test.c: At top level:
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
ma., 13 de may. de 2025 22:56:38: 
 tests:  3|4
total_score: 20/70
798d508
ma., 13 de may. de 2025 23:04:59: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  5|3
total_score: 35/70
29b7710
ma., 13 de may. de 2025 23:08:47: 
 sudoku.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
e67651f
ma., 13 de may. de 2025 23:09:53: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
16ca4d8
ma., 13 de may. de 2025 23:10:33: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b495ae4
ma., 13 de may. de 2025 23:14:03: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
5358038
ma., 13 de may. de 2025 23:23:40: 
 sudoku.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
57a4443
ma., 13 de may. de 2025 23:26:37: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
c5d4999
ma., 13 de may. de 2025 23:37:45: 
 sudoku.c | 28 +++++++++-------------------
 1 file changed, 9 insertions(+), 19 deletions(-)
 tests:  5|3
total_score: 35/70
4e9dd85
ma., 13 de may. de 2025 23:40:18: 
 sudoku.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
635c2d3
ma., 13 de may. de 2025 23:40:57: 
 sudoku.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  5|3
total_score: 35/70
fa5afaf
ma., 13 de may. de 2025 23:42:54: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
b462c54
